--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="col-sm-12 text-center">
               <span class="label label--inline">Speakers</span>
               <span>Si quieres participar en el mayor evento global sobre Microsoft Azure como speaker
-                <a href="#">Ingresa en este formulario.</a>
+                <a href="https://goo.gl/forms/CP5wxQCACXrsJzxH3" target="_new">Ingresa en este formulario.</a>
               </span>
             </div>
           </div>
