--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                   El <strong>sábado 22 de Abril de 2017</strong> 
                   vamos a batir algunos récords.
                 </p>
-                <!--<a class="btn btn--primary type--uppercase" href="index.html">
+                <a class="btn btn--primary type--uppercase" target="_new" href="https://www.eventbrite.com/e/registro-global-azure-bootcamp-2017-medellin-colombia-32716305350">
                   <span class="btn__text">
                   Reclama tu entrada
                   </span>
-                </a>-->
+                </a>
               </div>
             </div>
             <div class="col-md-6 col-sm-4 col-xs-12">
