Added section for invite tickets

--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
               <p class="lead-black">
                 El <strong>sábado 22 de Abril de 2017</strong> vamos a batir algunos récords.
               </p>
-              <!--<a class="btn btn--primary type--uppercase" href="index.html">
-                  <span class="btn__text">
+              <a class="btn btn--primary type--uppercase" target="_new" 
+                href="https://www.eventbrite.com/e/registro-global-azure-bootcamp-2017-medellin-colombia-32716305350">
+                <span class="btn__text">
                   Reclama tu entrada
-                  </span>
-                </a>-->
+                </span>
+              </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-4 col-xs-12">
@@ -105,9 +106,11 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
-            <span class="label label--inline">Speakers</span>
-            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure como speaker
-                <a href="#">Ingresa en este formulario.</a>
+            <span class="label label--inline">Entradas</span>
+            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure 
+                <a target="_new" href="https://www.eventbrite.com/e/registro-global-azure-bootcamp-2017-medellin-colombia-32716305350">
+                  reclama tu entrada.
+                </a>
               </span>
           </div>
         </div>
@@ -425,6 +428,22 @@
                 </tbody>
               </table>
             </div>
+          </div>
+        </div>
+        <!--end of row-->
+      </div>
+      <!--end of container-->
+    </section>
+    <section class="text-center cta cta-4 space--xxs border--bottom imagebg" data-gradient-bg='#4876BD,#488dbd,#48a5bd,#4876bd'>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <span class="label label--inline">Entradas</span>
+            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure 
+                <a target="_new" href="https://www.eventbrite.com/e/registro-global-azure-bootcamp-2017-medellin-colombia-32716305350">
+                  reclama tu entrada.
+                </a>
+              </span>
           </div>
         </div>
         <!--end of row-->
