--- a/index.html
+++ b/index.html
@@ -180,6 +180,40 @@
                 </thead>
                 <tbody>
                   <tr>
+                    <td>8:30</td>
+                    <td>
+                      <ul class="accordion accordion-1">
+                        <li>
+                          <div class="accordion__title">
+                            <span class="h5">Registro de asistencia</span>
+                          </div>
+                          <div class="accordion__content">
+                            <p class="lead">
+                              Llegada de los asistentes al stand del evento para realizar el checkin de asistencia.
+                            </p>
+                          </div>
+                        </li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>9:00</td>
+                    <td>
+                      <ul class="accordion accordion-1">
+                        <li class="active">
+                          <div class="accordion__title">
+                            <span class="h5">KEYNOTE</span>
+                          </div>
+                          <div class="accordion__content">
+                            <p class="lead">
+                              Bienvenida por parte del equipo organizador del evento.
+                            </p>
+                          </div>
+                        </li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
                     <td>9:30</td>
                     <td>
                       <ul class="accordion accordion-1">
