--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@
                   <tr>
                     <td>8:30</td>
                     <td>
-                      <ul class="accordion accordion-1">
-                        <li class="active">
-                          <div class="accordion__title">
+                      <div class="accordion__title">
                             <span class="h5">Registro de asistencia</span>
                           </div>
                           <div class="accordion__content">
@@ -192,25 +190,19 @@
                               Llegada de los asistentes al stand del evento para realizar el checkin de asistencia.
                             </p>
                           </div>
-                        </li>
-                      </ul>
                     </td>
                   </tr>
                   <tr>
                     <td>9:00</td>
                     <td>
-                      <ul class="accordion accordion-1">
-                        <li class="active">
-                          <div class="accordion__title">
+                      <div class="accordion__title">
                             <span class="h5">KEYNOTE</span>
                           </div>
                           <div class="accordion__content">
                             <p class="lead">
-                              Bienvenidad por parte del equipo organizador del evento.
+                              Bienvenida por parte del equipo organizador del evento.
                             </p>
                           </div>
-                        </li>
-                      </ul>
                     </td>
                   </tr>
                   <tr>
