--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <td>8:30</td>
                     <td>
                       <ul class="accordion accordion-1">
-                        <li>
+                        <li class="active">
                           <div class="accordion__title">
                             <span class="h5">Registro de asistencia</span>
                           </div>
@@ -206,7 +206,7 @@
                           </div>
                           <div class="accordion__content">
                             <p class="lead">
-                              Bienvenida por parte del equipo organizador del evento.
+                              Bienvenidad por parte del equipo organizador del evento.
                             </p>
                           </div>
                         </li>
