--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="text-block">
               <h5><span class="azure">Locación</span></h5>
               <p>
-                Politécnico Colombiano Jaime Isaza Cadavid
+                Politécnico Colombiano Jaime Isaza Cadavid - Auditorio Fernando Gomez Martinez P31
                 <br /> Carrera 48 # 7-151
                 <br /> El Poblado, Medellín
               </p>
@@ -545,7 +545,7 @@
           </div>
           <div class="col-md-5 col-sm-5">
             <div class="switchable__text">
-              <h3>Politécnico Colombiano Jaime Isaza Cadavid
+              <h3>Politécnico Colombiano Jaime Isaza Cadavid - Auditorio Fernando Gomez Martinez P31
                 <br />Carrera 48 # 7-151
               </h3>
             </div>
