--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="text-block">
               <h5><span class="azure">Locación</span></h5>
               <p>
-                Politécnico Colombiano Jaime Isaza Cadavid
+                Politécnico Colombiano Jaime Isaza Cadavid - Auditorio Fernando Gomez Martinez P31
                 <br /> Carrera 48 # 7-151
                 <br /> El Poblado, Medellín
               </p>
@@ -182,27 +182,35 @@
                   <tr>
                     <td>8:30</td>
                     <td>
-                      <div class="accordion__title">
+                      <ul class="accordion accordion-1">
+                        <li class="active">
+                          <div class="accordion__title">
                             <span class="h5">Registro de asistencia</span>
                           </div>
                           <div class="accordion__content">
-                            <p>
+                            <p class="lead">
                               Llegada de los asistentes al stand del evento para realizar el checkin de asistencia.
                             </p>
                           </div>
+                        </li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
                     <td>9:00</td>
                     <td>
-                      <div class="accordion__title">
+                      <ul class="accordion accordion-1">
+                        <li class="active">
+                          <div class="accordion__title">
                             <span class="h5">KEYNOTE</span>
                           </div>
                           <div class="accordion__content">
-                            <p>
-                              Bienvenida por parte del equipo organizador del evento.
+                            <p class="lead">
+                              Bienvenidad por parte del equipo organizador del evento.
                             </p>
                           </div>
+                        </li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -537,7 +545,7 @@
           </div>
           <div class="col-md-5 col-sm-5">
             <div class="switchable__text">
-              <h3>Politécnico Colombiano Jaime Isaza Cadavid
+              <h3>Politécnico Colombiano Jaime Isaza Cadavid - Auditorio Fernando Gomez Martinez P31
                 <br />Carrera 48 # 7-151
               </h3>
             </div>
