Add link for the call to speakers

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
               <p class="lead-black">
                 El <strong>sábado 21 de Abril de 2018</strong> vamos a batir algunos récords.
               </p>
-              <!--<a class="btn btn--primary type--uppercase" target="_new" 
-                href="https://www.eventbrite.com/e/registro-global-azure-bootcamp-2017-medellin-colombia-32716305350">
+              <a class="btn btn--primary type--uppercase" target="_new" 
+                href="https://www.papercall.io/global-azure-2018">
                 <span class="btn__text">
-                  Reclama tu entrada
+                  Call for Speakers
                 </span>
-              </a>-->
+              </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-4 col-xs-12">
             <div class="video-cover border--round box-shadow-wide">
-              <div class="background-image-holder">
+              <!--<div class="background-image-holder">
                 <img alt="image" src="img/conference-2.jpg" />
               </div>
-              <div class="video-play-icon"></div>
-              <iframe src="https://www.youtube.com/embed/MVenMvJOO7c?autoplay=1" allowfullscreen="allowfullscreen"></iframe>
+              <div class="video-play-icon"></div>-->
+              <iframe src="https://www.youtube.com/embed/MVenMvJOO7c?autoplay=0" allowfullscreen="allowfullscreen"></iframe>
             </div>
             <!--end video cover-->
           </div>
@@ -103,8 +103,8 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <span class="label label--inline">Speakers</span>
-            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure como speaker, pronto estaremos
-              anunciando como ser parte.
+            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure como speaker, haz click 
+              <a href="https://www.papercall.io/global-azure-2018" target="_blank">aquí</a>.
               </span>
           </div>
         </div>
