Change open tickets

--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
               <h1>
                 EL MAYOR EVENTO DE COMUNIDAD SOBRE MICROSOFT AZURE
               </h1>
-              <p class="lead-black">
-                El <strong>sábado 21 de Abril de 2018</strong> vamos a batir algunos récords.
-              </p>
-              <a class="btn btn--primary type--uppercase" target="_new" 
-                href="https://www.papercall.io/global-azure-2018">
-                <span class="btn__text">
-                  Call for Speakers
-                </span>
-              </a>
+              <div style="background-color:white; padding: 20px;">
+                <p class="lead-black">
+                  El <strong>sábado 21 de Abril de 2018</strong> vamos a batir algunos récords.
+                </p>
+                <p class="lead-black">
+                  Inscripciones abiertas a partir del <strong class="azure">lunes 2 de Abril de 2018</strong>.
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-md-6 col-sm-4 col-xs-12">
@@ -102,10 +101,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
-            <span class="label label--inline">Speakers</span>
-            <span>Si quieres participar en el mayor evento global sobre Microsoft Azure como speaker, haz click 
-              <a href="https://www.papercall.io/global-azure-2018" target="_blank">aquí</a>.
-              </span>
+            <span>
+              El registro para todos los asistentes estará disponible a partir del <span class="label label--inline">2 de abril </span>
+            </span>
           </div>
         </div>
         <!--end of row-->
@@ -130,6 +128,9 @@
               el uso de la plataforma <span class="azure">Microsoft Azure</span>, así como charlas con los
               expertos. Además de esta gran oportunidad de aprendizaje, los asistentes podrán participar en varios hands-on
               labs "globales", formando parte de una granja de cómputo mundial.
+            </p>
+            <p class="lead">
+              El proximo <span class="azure">lunes 2 de abril</span> a medio día estaran abiertas las inscripciones para este evento en Medellín.
             </p>
           </div>
           <div class="col-sm-4 col-md-3">
