Link to free tickets

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
                 <p class="lead-black">
                   El <strong>sábado 21 de Abril de 2018</strong> vamos a batir algunos récords.
                 </p>
-                <p class="lead-black">
-                  Inscripciones abiertas a partir del <strong class="azure">lunes 2 de Abril de 2018</strong>.
-                </p>
+                <a class="btn btn--primary type--uppercase" target="_new" 
+                  href="https://globalazure2018.eventbrite.com/">
+                  <span class="btn__text">
+                    Reclama tu entrada
+                  </span>
+                </a>
               </div>
             </div>
           </div>
@@ -102,7 +105,10 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <span>
-              El registro para todos los asistentes estará disponible a partir del <span class="label label--inline">2 de abril </span>
+              Tenemos disponibles solo 150 entradas para este evento 
+              <a target="_new" href="https://globalazure2018.eventbrite.com/">
+                reclama la tuya
+              </a>
             </span>
           </div>
         </div>
