--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <img alt="image" src="img/conference-2.jpg" />
               </div>
               <div class="video-play-icon"></div>-->
-              <iframe src="https://www.youtube.com/embed/MVenMvJOO7c?autoplay=0" allowfullscreen="allowfullscreen"></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/MVenMvJOO7c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <!--end video cover-->
           </div>
