--- a/index.html
+++ b/index.html
@@ -85,13 +85,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-4 col-xs-12">
-            <div class="video-cover border--round box-shadow-wide">
-              <!--<div class="background-image-holder">
-                <img alt="image" src="img/conference-2.jpg" />
-              </div>
-              <div class="video-play-icon"></div>-->
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/MVenMvJOO7c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="col-md-6 col-sm-4 col-xs-12" style="padding-top: 10px;">
+            <div class="video-cover border--round box-shadow-wide mt-3" >
+              <img alt="image" src="img/ava.png" />
             </div>
             <!--end video cover-->
           </div>
