Update protocol less

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body id="body" class="tg-home tg-hometwo">
   <!--[if lt IE 8]>
-		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
   <!--************************************
 			Wrapper Start
@@ -3814,7 +3814,7 @@
                     <div class="tg-panelcontent">
                       <div class="tg-description">
                         <p><span>R.</span>Sí, para ingresar debes estar registrado y presentarte a la confirmación del ingreso. 
-                          Además te invitamos a <a href="http://azure.microsoft.com/en-us/pricing/free-trial/" target="_blank">activar</a> tu cuenta gratuita de Azure, para que nos acompañes en cada uno de los 
+                          Además te invitamos a <a href="//azure.microsoft.com/en-us/pricing/free-trial/" target="_blank">activar</a> tu cuenta gratuita de Azure, para que nos acompañes en cada uno de los 
                           laboratorios. Si deseas, puedes traer tu laptop con las herramientas y configuraciones que a ti, te gustan.
                         </p>
                       </div>
@@ -4336,8 +4336,8 @@
                     <div class="tg-description">
                       <p>¡Y este no es un evento cualquiera! Es un evento global celebrándose en 180 localizaciones 
                         en 53 países y 126 ciudades alrededor del globo. Si no puedes asistir al evento de Medellín y 
-                        te queda alguna otra ciudad más cerca, consulta en <a href="http://global.azurebootcamp.net/locations" target="_blank">
-                          http://global.azurebootcamp.net/locations </a>
+                        te queda alguna otra ciudad más cerca, consulta en <a href="//global.azurebootcamp.net/locations" target="_blank">
+                          global.azurebootcamp.net/locations </a>
                         para más información sobre las otras sedes del evento.</p>
                     </div>
                     <div class="tg-shareinvite">
