Add the other sponsors

--- a/index.html
+++ b/index.html
@@ -3800,11 +3800,11 @@
                     <h4><span>P.</span>¿Por qué se celebra el Global Azure Bootcamp?</h4>
                     <div class="tg-panelcontent">
                       <div class="tg-description">
-                        <p><span>R.</span>Para ayudar a las comunidades técnicas y desarrolladores a 
-                          empezar en el mundo del Cloud Computing, porque creemos que Microsoft Azure es 
-                          un gran producto y queremos decirle al mundo sobre él!. Esperamos beneficiar a 
-                          los principiantes como a los desarrolladores con experiencia, brindando el apoyo 
-                          que necesitan en el desarrollo y despliegue de sus proyecto en la nube; al mismo tiempo 
+                        <p><span>R.</span>Para ayudar a las comunidades técnicas y desarrolladores a
+                          empezar en el mundo del Cloud Computing, porque creemos que Microsoft Azure es
+                          un gran producto y queremos decirle al mundo sobre él!. Esperamos beneficiar a
+                          los principiantes como a los desarrolladores con experiencia, brindando el apoyo
+                          que necesitan en el desarrollo y despliegue de sus proyecto en la nube; al mismo tiempo
                           fortaleciendo la comunidad técnica de Azure.</p>
                       </div>
                     </div>
@@ -3813,8 +3813,8 @@
                     <h4><span>P.</span>¿Existe Algún Requisito?</h4>
                     <div class="tg-panelcontent">
                       <div class="tg-description">
-                        <p><span>R.</span>Sí, para ingresar debes estar registrado y presentarte a la confirmación del ingreso. 
-                          Además te invitamos a <a href="//azure.microsoft.com/en-us/pricing/free-trial/" target="_blank">activar</a> tu cuenta gratuita de Azure, para que nos acompañes en cada uno de los 
+                        <p><span>R.</span>Sí, para ingresar debes estar registrado y presentarte a la confirmación del ingreso.
+                          Además te invitamos a <a href="//azure.microsoft.com/en-us/pricing/free-trial/" target="_blank">activar</a> tu cuenta gratuita de Azure, para que nos acompañes en cada uno de los
                           laboratorios. Si deseas, puedes traer tu laptop con las herramientas y configuraciones que a ti, te gustan.
                         </p>
                       </div>
@@ -3824,8 +3824,8 @@
                     <h4><span>P.</span>¿Necesito llevar algo preparado?</h4>
                     <div class="tg-panelcontent">
                       <div class="tg-description">
-                        <p><span>R.</span>Aprovecharás mejor el evento si te traes tu propio portátil preparado con el 
-                          software que pronto anunciaremos (vuelve a visitar la página en breve para más información). 
+                        <p><span>R.</span>Aprovecharás mejor el evento si te traes tu propio portátil preparado con el
+                          software que pronto anunciaremos (vuelve a visitar la página en breve para más información).
                           Es mejor que lleves instalado dicho software para que no perder tiempo durante el evento.</p>
                       </div>
                     </div>
@@ -3834,10 +3834,10 @@
                     <h4><span>P.</span>¿El evento es para principiantes?</h4>
                     <div class="tg-panelcontent">
                       <div class="tg-description">
-                        <p><span>A.</span>Sí y no. Nos centraremos en una serie de sesiones y hands on labs 
-                          que apuntan a un nivel 200, pero también profundizaremos en escenarios reales, 
-                          zonas de preguntas y respuestas, etc. ¿Crees que ya lo sabes todo? 
-                          ¡Genial! Todavía necesitamos voluntarios, speakers y gente que nos ayude con los 
+                        <p><span>A.</span>Sí y no. Nos centraremos en una serie de sesiones y hands on labs
+                          que apuntan a un nivel 200, pero también profundizaremos en escenarios reales,
+                          zonas de preguntas y respuestas, etc. ¿Crees que ya lo sabes todo?
+                          ¡Genial! Todavía necesitamos voluntarios, speakers y gente que nos ayude con los
                           labs. Envíanos un correo electrónico a khriztianmoreno@gmail.com para formar parte de la organización.</p>
                       </div>
                     </div>
@@ -3882,28 +3882,49 @@
               <ul class="tg-brands">
                 <li class="tg-brand">
                   <figure>
-                    <a href="https://www.microsoft.com/es-co" target="_blanck">
+                    <a href="https://www.microsoft.com/es-co" target="_blank">
                       <img src="images/brands/img-01.png" alt="Microsoft" />
                     </a>
                   </figure>
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="https://avanent.org" target="_blanck">
+                    <a href="https://avanent.org/?ref=globalAzure" target="_blank">
                       <img src="images/brands/img-02.png" alt="Fundación Avanet" />
                     </a>
                   </figure>
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="https://www.rutanmedellin.org/es/?ref=netconfco" target="_blanck">
+                    <a href="https://www.rutanmedellin.org/es/?ref=globalAzure" target="_blank">
                       <img src="images/brands/img-03.png" alt="Ruta N" />
                     </a>
                   </figure>
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="javascript:void(0);" target="_blanck">
+                    <a href="https://www.teaminternational.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-05.png" alt="Team International">
+                    </a>
+                  </figure>
+                </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="https://www.ceiba.com.co/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-06.png" alt="Ceiba Software">
+                    </a>
+                  </figure>
+                </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="https://www.growthaccelerationpartners.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-07.png" alt="Growth Acceleration Partners">
+                    </a>
+                  </figure>
+                </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="javascript:void(0);" target="_blank">
                       <img src="images/brands/img-04.png" alt="image description">
                     </a>
                   </figure>
@@ -4334,8 +4355,8 @@
                       <h2>Localización del evento</h2>
                     </div>
                     <div class="tg-description">
-                      <p>¡Y este no es un evento cualquiera! Es un evento global celebrándose en 180 localizaciones 
-                        en 53 países y 126 ciudades alrededor del globo. Si no puedes asistir al evento de Medellín y 
+                      <p>¡Y este no es un evento cualquiera! Es un evento global celebrándose en 180 localizaciones
+                        en 53 países y 126 ciudades alrededor del globo. Si no puedes asistir al evento de Medellín y
                         te queda alguna otra ciudad más cerca, consulta en <a href="//global.azurebootcamp.net/locations" target="_blank">
                           global.azurebootcamp.net/locations </a>
                         para más información sobre las otras sedes del evento.</p>
