Add the one sponsor: IT

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                     <div class="tg-description">
                       <p>¡Las comunidades y los grupos de usuarios de todo el mundo desean aprender sobre Azure y la
                         computación en la nube!</p>
-                      <br />
-                      <p>
+                      <br class="hide-mobile"/>
+                      <p class="hide-mobile">
                         ¡El 27 de abril de 2019, todas las comunidades se reunirán una vez más en la sexta versión de
                         Global Azure Bootcamp!
                         Cada grupo de usuarios organizará su propia clase de inmersión profunda de un día en Azure de
@@ -195,7 +195,7 @@
                         hashtag social.
                       </p>
                     </div>
-                    <div class="tg-btnarea">
+                    <div class="tg-btnarea hide-mobile">
                       <a class="tg-btn" href="https://www.eventbrite.com/e/global-azure-bootcamp-2019-medellin-colombia-tickets-56500479455"
                         target="_blank">
                         Obtén tu entrada
@@ -3919,6 +3919,13 @@
                   <figure>
                     <a href="https://www.growthaccelerationpartners.com/?ref=globalAzure" target="_blank">
                       <img src="images/brands/img-07.png" alt="Growth Acceleration Partners">
+                    </a>
+                  </figure>
+                </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="https://www.itcolombia.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-08.png" alt="Intelligent Training">
                     </a>
                   </figure>
                 </li>
