Add the new sponsor

--- a/index.html
+++ b/index.html
@@ -3924,15 +3924,15 @@
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="https://www.itcolombia.com/?ref=globalAzure" target="_blank">
-                      <img src="images/brands/img-08.png" alt="Intelligent Training">
+                    <a href="http://www.intergrupo.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-04.png" alt="Intergrupo">
                     </a>
                   </figure>
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="javascript:void(0);" target="_blank">
-                      <img src="images/brands/img-04.png" alt="image description">
+                    <a href="https://www.itcolombia.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-08.png" alt="Intelligent Training">
                     </a>
                   </figure>
                 </li>
