Add the new sponsorhip

--- a/index.html
+++ b/index.html
@@ -3936,6 +3936,13 @@
                     </a>
                   </figure>
                 </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="http://10Pearls.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-09.png" alt="10Pearls">
+                    </a>
+                  </figure>
+                </li>
               </ul>
             </div>
           </div>
