Add the netUniversity sponsor

--- a/index.html
+++ b/index.html
@@ -3931,8 +3931,8 @@
                 </li>
                 <li class="tg-brand">
                   <figure>
-                    <a href="https://www.itcolombia.com/?ref=globalAzure" target="_blank">
-                      <img src="images/brands/img-08.png" alt="Intelligent Training">
+                    <a href="https://net-university.ninja/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-10.png" alt="NETUniversity">
                     </a>
                   </figure>
                 </li>
@@ -3940,6 +3940,13 @@
                   <figure>
                     <a href="http://10Pearls.com/?ref=globalAzure" target="_blank">
                       <img src="images/brands/img-09.png" alt="10Pearls">
+                    </a>
+                  </figure>
+                </li>
+                <li class="tg-brand">
+                  <figure>
+                    <a href="https://www.itcolombia.com/?ref=globalAzure" target="_blank">
+                      <img src="images/brands/img-08.png" alt="Intelligent Training">
                     </a>
                   </figure>
                 </li>
