Add Eliana as new speaker

--- a/index.html
+++ b/index.html
@@ -588,10 +588,15 @@
                                 </figure>
                                 <div class="tg-contentbox">
                                   <div class="tg-speakername">
-                                    <h2>Hernan Guzman</h2>
-                                    <span class="tg-eventcatagory">.NET Developer. Microsoft MVP. Biker</span>
+                                    <h2>Eliana Caraballo & Hernan Guzman</h2>
+                                    <span class="tg-eventcatagory">.NET Developers 💞 Bikers</span>
                                   </div>
                                   <ul class="tg-socialicons">
+                                    <li class="tg-linkedin">
+                                      <a href="https://www.linkedin.com/in/elianacaraballoa/" target="_blank">
+                                        <i class="fa fa-linkedin"></i>
+                                      </a>
+                                    </li>
                                     <li class="tg-linkedin">
                                       <a href="https://www.linkedin.com/in/hernandgr/" target="_blank">
                                         <i class="fa fa-linkedin"></i>
@@ -927,6 +932,23 @@
                     <p>
                       Ingeniero informático, desarrollador de software, Microsoft MVP y biker aficionado con más de 10 años de 
                       experiencia en desarrollo usando tecnologías Microsoft.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="item tg-speaker">
+                <figure class="tg-speakerimg">
+                  <img src="images/speakers/img-full-09.jpg" alt="Eliana Caraballo">
+                </figure>
+                <div class="tg-contentbox">
+                  <div class="tg-title">
+                    <h2><a href="https://www.linkedin.com/in/elianacaraballoa/">Eliana Caraballo</a></h2>
+                    <span>.NET Developer</span>
+                  </div>
+                  <div class="tg-description">
+                    <p>
+                      Ingeniera de sistemas con experiencia en desarrollo de proyectos con tecnologías Microsoft y Oracle. 
+                      Apasionado por la ciencia de datos, desarrollo, ingeniería de software y tecnología. 
                     </p>
                   </div>
                 </div>
