Fix the abstract to marvin talk

--- a/index.html
+++ b/index.html
@@ -783,9 +783,9 @@
                               </div>
                               <div class="tg-description">
                                 <p>
-                                  Has usado serverless? sabes qué es? cómo microsoft azure puede ayudarte con azure functions? 
-                                  sabías que no te deberías de preocupar por el escalamiento? sabías que si no lo usas correctamente, 
-                                  te puede salir muy costoso? Contaré pros y contras de usar serverless según mi experiencia (3 años).
+                                  En esta charla conoceremos dos servicios de Azure: Service Bus y Worker Role, veremos en cuales 
+                                  casos se debe usar y no usar una implementación ascincrona y como mejorar el rendimiento de nuestras 
+                                  aplicaciones delegando el procesamiento en otros procesos.
                                 </p>
                               </div>
                               <div class="tg-eventspeaker">
