Fix the section margin

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <!--************************************
 					Event Counter Start
 			*************************************-->
-      <section class="tg-haslayout tg-sectionspace tg-bgaddtocalendar">
+      <section class="tg-haslayout tg-sectionspace tg-bgaddtocalendar tg-sectionTop">
         <div class="container">
           <div class="tg-eventinfo tg-eventinfovtwo">
             <div class="tg-eventcontent">
